--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-theme: jekyll-theme-cayman
-plugins:
-  - jemojii
+lsi: false
+safe: true
+source: /cours_info
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
