--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,5 @@ kramdown:
   syntax_highlighter: rouge
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jemoji
